fix: adapt to Java 8 API